# first-genAI-project

./: .gitignore  .vercelignore  ARCHITECTURE.md  DEPLOY_STREAMLIT.md  DEPLOY_VERCEL.md  PIPELINE_CONNECTIVITY.md  README.md  USAGE.md  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
.streamlit/: config.toml
api/: __init__.py  app.py  index.py
frontend/: README.md  index.html  package.json  vite.config.js
frontend-next/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/components/: RecommendationForm.tsx  ResultCard.tsx
frontend-next/lib/: api.ts
frontend/src/: App.css  App.jsx  index.css
phase1/ingestion/: phase1_ingestion.py
phase1/tests/: test_phase1_ingestion.py
phase2/: __init__.py
phase2/preferences/: __init__.py  models.py  normalize.py
phase2/tests/: test_phase2_preferences.py
phase3/: __init__.py
phase3/ranking/: __init__.py  engine.py  models.py
phase3/tests/: conftest.py  test_phase3_integration.py  test_phase3_ranking.py
phase4/: __init__.py
phase4/llm/: __init__.py  models.py  orchestrator.py
phase4/llm/providers/: __init__.py  groq_provider.py
phase4/tests/: conftest.py  test_phase4_llm.py
phase5/: __init__.py
phase5/display/: __init__.py  api.py  serializer.py
phase5/tests/: test_e2e_pipeline.py  test_phase5_display.py
public/: index.html
scripts/: run_server.sh  test_live_e2e.py
